# SlicerSEEG

./: .gitignore  CMakeLists.txt  README.md
SEEG_ElectrodeLocalization/: CMakeLists.txt  SEEG_ElectrodeLocalization.py
SEEG_ElectrodeLocalization/Bolt_head/: bolt_head.py  bolt_head_concensus.py
SEEG_ElectrodeLocalization/Brain_mask_methods/: brain_mask_extractor_otsu.py
SEEG_ElectrodeLocalization/Centroids_pipeline/: centroids.py  confidence_wrapper.py  debug.py  test.py
SEEG_ElectrodeLocalization/Centroids_pipeline/Features/: ct_features.py  extract_additional_features.py  preprocess_electrode_data.py
SEEG_ElectrodeLocalization/Electrode_path/: construction_14_05.py  construction_17_05.py  construction_3.py  orga.py  test_slicer.py
SEEG_ElectrodeLocalization/Masks_ensemble/: masks_fusion.py  masks_fusion_top.py  test_global.py
SEEG_ElectrodeLocalization/Outermost_centroids_coordinates/: c_outermost_kdtree.py  centroids_csv.py  centroids_to_volume.py  outermost_centroids_vol_slicer.py
SEEG_ElectrodeLocalization/Resources/UI/: SEEG_ElectrodeLocalization.ui
SEEG_ElectrodeLocalization/Results/: image_enhancement.py
SEEG_ElectrodeLocalization/Threshold_mask/: __init__.py  new_enhance.py  threshold_model.py  threshold_roi.py
SEEG_ElectrodeLocalization/Threshold_mask/P5/: new_enhance_P5.py
SEEG_ElectrodeLocalization/Threshold_mask/P6/: new_enahnce_P6.py
SEEG_ElectrodeLocalization/Threshold_mask/P7/: new_enhance_P7.py
SEEG_ElectrodeLocalization/Threshold_mask/Percentiles_approach/: threshold_percentile.py
SEEG_masking/: CMakeLists.txt  SEEG_masking.py
SEEG_masking/Bolt_head/: bolt_head_2.py  bolt_head_og.py  filter_bolt_heads.py
SEEG_masking/Bolt_head/Threshold/: features_extraction.py
SEEG_masking/Centroids_pipeline/: centroids_feature_extraction.py  just_centroids_coordinates.py  model_application.py
SEEG_masking/Centroids_pipeline/Features/: create_key_feature_plots.py
SEEG_masking/Electrode_path/: adaptive_clustering.py  construction_4.py  construction_angles_adaptive.py  construction_path.py  orga_bolt.py
SEEG_masking/End_points/: center_points.py  end_points.py  midplane.py  midplane_prueba.py
SEEG_masking/Outermost_centroids_coordinates/: outermost_centroids_slicer.py
SEEG_masking/Resources/UI/: SEEG_masking.ui
SEEG_masking/Results/: entry_points_comparison.py  points_predictor.py
SEEG_masking/Threshold_mask/: ctp_enhancer.py  enhance_ctp.py  histogram_pipeline.py  new_enhance_ml.py  new_enhance_ml_faster.py
SEEG_masking/Threshold_mask/P1/: new_enhance_P1.py
SEEG_masking/Threshold_mask/P3/: new_enhanced_P3.py
SEEG_masking/Threshold_mask/P4/: new_enhanced_P4.py
SEEG_masking/Threshold_mask/P8/: new_enhance_P8.py
